@@ -1,3 +1,7 @@
+2012-01-23 Steven Beale <steven.beale@physik.uni-muenchen.de>
+    * Added Merging RDO files
+    * Tagging as PATJobTransforms-00-03-88
+
 2012-01-23 Bjorn Sarrazin  <bjorn.sarrazin@cern.ch>
     * set EvtMax=0 in MergeNTUP_trf.py (for panda monitor)
     * Tagging as PATJobTransforms-00-03-87
